--- a/project1/src/CMakeLists.txt
+++ b/project1/src/CMakeLists.txt
@@ -1,5 +1,13 @@
 project(project_1_fys4411)
 
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE debug)
+endif()
+
+set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+set(CMAKE_CXX_FLAGS_DEBUG "-g")
+set(CMAKE_CXX_FLAGS_RELEASE "-O3")
+set(CMAKE_CXX_STANDARD 11)
 # Add directories containing header-files
 include_directories(
     .
